# erosolar-llm

./: .env.example  .firebaserc  .gitignore  Bo_Resume.latex  DEDICATION.md  DOMAINS.md  Dockerfile  README.md  README.md.backup  WHITEPAPER.md  __init__.py  __main__.py  auto_attention.py  automated_rlhf.py  benchmark_appreciation.py  benchmarks.py  bridge_synthetic.py  char_tokenizer.py  consolidate_to_pipeline.py  convert_to_coreml.py  create_infinite_gains_gif.py  data.py  dedication.py  dynamic_categories.py  dynamic_weights.json  enhance_infinite_improvement.py  enhance_training_data.py  ensure_concept_coverage.py  ensure_infinite_improvement.py  export_weights_for_ios.py  failed_scoring.txt  firebase.json  firestore.rules  gen.py  generate.py  generate_all_training_data.py  generate_bridge_data.py  generate_coding_only.py  generate_concept_foundations.py  generate_conversational.py  (+48 more)
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
angular-chat/: .firebaserc  Dockerfile  angular.json  firebase.json  package-lock.json  package.json
angular-chat/.firebase/: hosting.ZGlzdC9lcm9zb2xhci1jaGF0L2Jyb3dzZXI.cache
angular-chat/src/: index.html  main.ts  styles.scss
architecture-roadmap/: README.md
cache/attention_guidance/: data_analysis.json
cache/concepts/: chunk_cache.json
cache/configs/: gpt5_config.json
cache/foundations/: conversational.jsonl  honest_safety.jsonl
cache/optimal_gen/: optimal_training.jsonl
cache/pipeline/: rejections.jsonl
cache/quality_gate/: baseline.json
cache/tokenizer_medium/: tokenizer.json
configs/: firebase-service-account.json  firebase_config.py
data_store/: benchmark_history.json  benchmarks.json  coding_only_prompts.jsonl  coding_only_seen.db  coding_only_state.json  coding_training_data.jsonl  cot_optimization_training_data.jsonl  difficulty_bank.json  embeddings.json  generalization.json  generated_training_data.jsonl  generation_history.jsonl  generational_state.json  judge_report.json  judge_samples.json  loser_context.json  manifest.json  master_scalar_log.jsonl  seed_usage.json  test_cache.npz  training_manifest.json  version.json
data_store/outreach_rag/: index.jsonl
data_store/rounds/: round_01.jsonl  round_02.jsonl
data_store/training_chunks/: chunk_0000.jsonl  chunk_0001.jsonl  chunk_0002.jsonl  (+3 more)
deprecated/: auto_improve.py  beat_the_generator.py  benchmark_runner.py  download_data.py  download_instruction_data.py  download_instruction_datasets.py  download_knowledge_data.py  download_security_data.py  download_wiki_instructions.py  download_wikipedia.py  evaluate_model.py  expanded_training_data.py  general_training_data.py  generate_adversarial_training.py  generate_superior_training.py  generate_training.py  infini_attention.py  kids_retrieval.py  kids_smart_responder.py  optimize_data.py  provable_adversarial_training.py  test_infini_attention.py  test_prompts.py  train_kids_fast.sh  train_kids_minimum.sh  train_kids_optimal.sh  train_kids_working.sh  train_medium.py  train_superior.py  upgrade_base_pairs.py  weight_manager.py
erosolar-web-deploy/: firebase.json
erosolar_agent/: README.md  __init__.py  secrets.py
firebase_functions/: index.js  package-lock.json  package.json
functions_python/: main.py  requirements.txt
inference_service/: Dockerfile  app.py  build.sh  requirements.txt
model-landscape/: README.md  models.yaml  update.py
models/: erosolar  registry.json
optional_unverified_concepts/: foundational_concepts.json
paper/: ARXIV_SUBMISSION.md  Makefile  main.tex
site/: index.html
(+117 files in other folders)
